--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,10 +1,10 @@
 .dialog {
   position: fixed;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
   display: flex;
+  height: 100vh;
+  width: 100%;
   overflow-y: auto;
   justify-content: center;
   align-items: center;
